feat: refactor backend core modules